Update branding in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-  <title>{% block title %}MySite{% endblock %}</title>
+  <title>{% block title %}Text Management{% endblock %}</title>
 
   {% tailwind_preload_css %}
 
@@ -37,7 +37,7 @@
   <!-- Footer -->
   <footer class="bg-gray-100 text-gray-600 py-4">
     <div class="container mx-auto text-center text-sm">
-      &copy; {{ now|date:"Y" }} MySite. All rights reserved.
+      &copy; {{ now|date:"Y" }} jay3ss. All rights reserved.
     </div>
   </footer>
 
