--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -22,9 +22,9 @@
     <div class="container mx-auto px-4 py-3 flex justify-between items-center">
       <a href="{% url 'home' %}" class="text-xl font-semibold">MySite</a>
       <ul class="flex space-x-4">
-        <li><a href="{% url 'home' %}" class="hover:text-primary-dark">Home</a></li>
+        {% comment %} <li><a href="{% url 'home' %}" class="hover:text-primary-dark">Home</a></li>
         <li><a href="{% url 'about' %}" class="hover:text-primary-dark">About</a></li>
-        <li><a href="{% url 'contact' %}" class="hover:text-primary-dark">Contact</a></li>
+        <li><a href="{% url 'contact' %}" class="hover:text-primary-dark">Contact</a></li> {% endcomment %}
       </ul>
     </div>
   </nav>
