--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -20,7 +20,7 @@
   <!-- Navbar -->
   <nav class="bg-primary text-white shadow-md">
     <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-      <a href="{% url 'home' %}" class="text-xl font-semibold">MySite</a>
+      <a href="{% url 'home' %}" class="text-xl font-semibold">Text Mgmt</a>
       <ul class="flex space-x-4">
         {% comment %} <li><a href="{% url 'home' %}" class="hover:text-primary-dark">Home</a></li>
         <li><a href="{% url 'about' %}" class="hover:text-primary-dark">About</a></li>
